Fix community marketplace discourse parsing (#5376)
Signed-off-by: Ravi Nadahar <nadahar@rediffmail.com>